# kInd

./: CMakeLists.txt  LICENSE  Model.cpp  Model.h  README.md  kInd.cpp  kInd.h  main.cpp
minisat/: CMakeLists.txt
minisat/minisat/core/: Solver.h
